// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Snapshots tests should match snapshot 1`] = `
<div>
  <div>
    <div
      class="container desktop"
    >
      <div
        class="component m"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="title"
          id="tab-1"
          role="tab"
          style="display: inline-flex;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsWrapper"
          >
            <span
              class="content"
            >
              Таб 1
            </span>
            <span
              class="rightAddons"
            >
              addon
            </span>
          </div>
        </button>
        <button
          aria-selected="true"
          class="title selected"
          id="tab-2"
          role="tab"
          style="display: inline-flex;"
          tabindex="0"
          type="button"
        >
          <div
            class="addonsWrapper"
          >
            <span
              class="content"
            >
              Таб 2
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-3"
          role="tab"
          style="display: inline-flex;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsWrapper"
          >
            <span
              class="content"
            >
              Таб 3
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-4"
          role="tab"
          style="display: inline-flex;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsWrapper"
          >
            <span
              class="content"
            >
              Таб 4
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-5"
          role="tab"
          style="display: inline-flex;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsWrapper"
          >
            <span
              class="content"
            >
              Таб 5
            </span>
          </div>
        </button>
        <div
          class="line"
        />
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 2`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="component s"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="component component component size-48 size-48 outlined outlined rounded outlined withRightAddons title"
          role="tab"
          style="display: inline-flex; white-space: nowrap;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsContainer"
          >
            <span>
              Таб 1
            </span>
            <span
              class="addons"
            >
              addon
            </span>
          </div>
        </button>
        <button
          aria-selected="true"
          class="component component component size-48 size-48 outlined outlined checked rounded outlined title"
          role="tab"
          style="display: inline-flex; white-space: nowrap;"
          tabindex="0"
          type="button"
        >
          <div
            class="addonsContainer"
          >
            <span>
              Таб 2
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 outlined outlined rounded outlined title"
          role="tab"
          style="display: inline-flex; white-space: nowrap;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsContainer"
          >
            <span>
              Таб 3
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 outlined outlined rounded outlined title"
          role="tab"
          style="display: inline-flex; white-space: nowrap;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsContainer"
          >
            <span>
              Таб 4
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 outlined outlined rounded outlined title"
          role="tab"
          style="display: inline-flex; white-space: nowrap;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsContainer"
          >
            <span>
              Таб 5
            </span>
          </div>
        </button>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 3`] = `
<div>
  <div>
    <div
      class="scrollableContainerWrapper"
    >
      <div
        class="container"
      >
        <div
          class=""
          role="tablist"
        >
          <button
            aria-selected="false"
            class=""
            id="tab-1"
            role="tab"
            style="display: inline-flex;"
            tabindex="-1"
            type="button"
          >
            <div>
              <span
                class=""
              >
                Таб 1
              </span>
              <span>
                addon
              </span>
            </div>
          </button>
          <button
            aria-selected="true"
            class=""
            id="tab-2"
            role="tab"
            style="display: inline-flex;"
            tabindex="0"
            type="button"
          >
            <div>
              <span
                class=""
              >
                Таб 2
              </span>
            </div>
          </button>
          <button
            aria-selected="false"
            class=""
            id="tab-3"
            role="tab"
            style="display: inline-flex;"
            tabindex="-1"
            type="button"
          >
            <div>
              <span
                class=""
              >
                Таб 3
              </span>
            </div>
          </button>
          <button
            aria-selected="false"
            class=""
            id="tab-4"
            role="tab"
            style="display: inline-flex;"
            tabindex="-1"
            type="button"
          >
            <div>
              <span
                class=""
              >
                Таб 4
              </span>
            </div>
          </button>
          <button
            aria-selected="false"
            class=""
            id="tab-5"
            role="tab"
            style="display: inline-flex;"
            tabindex="-1"
            type="button"
          >
            <div>
              <span
                class=""
              >
                Таб 5
              </span>
            </div>
          </button>
          <div />
        </div>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 4`] = `
<div>
  <div>
    <div
      class="scrollableContainerWrapper"
    >
      <div
        class="container"
      >
        <div
          class=""
          role="tablist"
        >
          <button
            aria-selected="false"
            class="component component component size-40 size-40 outlined outlined rounded outlined withRightAddons"
            role="tab"
            style="display: inline-flex; white-space: nowrap;"
            tabindex="-1"
            type="button"
          >
            <div
              class="addonsContainer"
            >
              <span>
                Таб 1
              </span>
              <span
                class="addons"
              >
                addon
              </span>
            </div>
          </button>
          <button
            aria-selected="true"
            class="component component component size-40 size-40 outlined outlined checked rounded outlined"
            role="tab"
            style="display: inline-flex; white-space: nowrap;"
            tabindex="0"
            type="button"
          >
            <div
              class="addonsContainer"
            >
              <span>
                Таб 2
              </span>
            </div>
          </button>
          <button
            aria-selected="false"
            class="component component component size-40 size-40 outlined outlined rounded outlined"
            role="tab"
            style="display: inline-flex; white-space: nowrap;"
            tabindex="-1"
            type="button"
          >
            <div
              class="addonsContainer"
            >
              <span>
                Таб 3
              </span>
            </div>
          </button>
          <button
            aria-selected="false"
            class="component component component size-40 size-40 outlined outlined rounded outlined"
            role="tab"
            style="display: inline-flex; white-space: nowrap;"
            tabindex="-1"
            type="button"
          >
            <div
              class="addonsContainer"
            >
              <span>
                Таб 4
              </span>
            </div>
          </button>
          <button
            aria-selected="false"
            class="component component component size-40 size-40 outlined outlined rounded outlined"
            role="tab"
            style="display: inline-flex; white-space: nowrap;"
            tabindex="-1"
            type="button"
          >
            <div
              class="addonsContainer"
            >
              <span>
                Таб 5
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 5`] = `
<div>
  <div>
    <div
      class="container desktop"
    >
      <div
        class="component m"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="title"
          id="tab-1"
          role="tab"
          style="display: inline-flex;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsWrapper"
          >
            <span
              class="content"
            >
              Таб 1
            </span>
            <span
              class="rightAddons"
            >
              addon
            </span>
          </div>
        </button>
        <button
          aria-selected="true"
          class="title selected"
          id="tab-2"
          role="tab"
          style="display: inline-flex;"
          tabindex="0"
          type="button"
        >
          <div
            class="addonsWrapper"
          >
            <span
              class="content"
            >
              Таб 2
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-3"
          role="tab"
          style="display: inline-flex;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsWrapper"
          >
            <span
              class="content"
            >
              Таб 3
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-4"
          role="tab"
          style="display: inline-flex;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsWrapper"
          >
            <span
              class="content"
            >
              Таб 4
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="title"
          id="tab-5"
          role="tab"
          style="display: inline-flex;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsWrapper"
          >
            <span
              class="content"
            >
              Таб 5
            </span>
          </div>
        </button>
        <div
          class="line"
        />
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;

exports[`Tabs Snapshots tests should match snapshot 6`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="component s"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="component component component size-48 size-48 outlined outlined rounded outlined withRightAddons title"
          role="tab"
          style="display: inline-flex; white-space: nowrap;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsContainer"
          >
            <span>
              Таб 1
            </span>
            <span
              class="addons"
            >
              addon
            </span>
          </div>
        </button>
        <button
          aria-selected="true"
          class="component component component size-48 size-48 outlined outlined checked rounded outlined title"
          role="tab"
          style="display: inline-flex; white-space: nowrap;"
          tabindex="0"
          type="button"
        >
          <div
            class="addonsContainer"
          >
            <span>
              Таб 2
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 outlined outlined rounded outlined title"
          role="tab"
          style="display: inline-flex; white-space: nowrap;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsContainer"
          >
            <span>
              Таб 3
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 outlined outlined rounded outlined title"
          role="tab"
          style="display: inline-flex; white-space: nowrap;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsContainer"
          >
            <span>
              Таб 4
            </span>
          </div>
        </button>
        <button
          aria-selected="false"
          class="component component component size-48 size-48 outlined outlined rounded outlined title"
          role="tab"
          style="display: inline-flex; white-space: nowrap;"
          tabindex="-1"
          type="button"
        >
          <div
            class="addonsContainer"
          >
            <span>
              Таб 5
            </span>
          </div>
        </button>
      </div>
    </div>
    <div
      class="component"
      role="tabpanel"
      tabindex="0"
    >
      Таб 2
    </div>
  </div>
</div>
`;
